--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+<!--    https://github.com/mattcat10/react-runtime-config-->
+    <!-- runtime config -->
+    <script src="%PUBLIC_URL%/runtime-config.js"></script>
+    <!-- runtime config -->
     <title>R</title>
   </head>
   <body>
